--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,14 @@
+# Site wide configuration
+
+title: N-Mac
+locale: en_US
 theme: jekyll-theme-tactile
+# logo: #filename of a logo image that has been placed into your images directory
+
+# Enter the following platform usernames if you would like for them to appear on your site.
+owner:
+  name: N-Mac
+  #avatar: bio-photo.jpg
+  bio: "Data practitioner"
+  linkedin: #username
+  github: n-mac
