--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title: N-Mac
 locale: en_US
-theme: jekyll-theme-tactile
+theme: jekyll-theme-minimal
 # logo: #filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
