--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: N-Mac
 locale: en_US
 theme: jekyll-theme-minimal
-logo: /_images/n-mac_hiking.jpg
+avatar: /_images/n-mac_hiking.jpg
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
