--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ locale: en_US
 theme: jekyll-theme-minimal
 include:
  - _posts
+ - _images
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
