nm-update-baseurl

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,7 +2,7 @@
 title: Naheil McAvinue
 description: 'Startup junkie with an enthusiasm for data, food, and coffee'
 url: 'http://n-mac.github.io'
-# baseurl: '/'
+baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 # disable_landing_page: true
